Tweak get-notified form, add link from heading

--- a/_assets/sass/globals/_mixins.scss
+++ b/_assets/sass/globals/_mixins.scss
@@ -22,6 +22,7 @@ $color-highlight: #FDEA98;
 $color-lines: rgba(100, 84, 48, 0.1);
 $color-spot: #FF548F;
 $color-headings-home: #708A9F;
+$color-error: $color-headings-home;
 
 
 // Global classes ———————————————————————————— •
