--- a/_assets/sass/components/_signup-forms.scss
+++ b/_assets/sass/components/_signup-forms.scss
@@ -25,15 +25,31 @@ body #mc_embed_signup {
   
   .mc-field-group {
     
-    input[type="text"] {
+    label {
+      font-size: 0.7em;
+      text-transform: uppercase;
+      font-weight: 500;
+      color: lighten(black, 40%);
+      margin-bottom: -2.4em;
+      margin-left: 23px;
+      .quiet {
+        text-transform: none;
+        color: lighten(black, 60%);
+      }
+    }
+    
+    input[type="text"], input[type="email"] {
       box-sizing: border-box;
       font-family: inherit;
       font-size: inherit;
-      padding: 0.3em 0.5em;
+      padding: 1.4em 20px 0.7em;
+      text-indent: 0px;
+      border: 2px solid lighten($color-text, 50%);
     }
     
     input.email {
-      padding: 0.88em 0.5em;
+      padding: 1.4em 20px 0.7em;
+      border: 2px solid lighten($color-text, 50%);
     }
     
     @include responsive-break-point(480px) {
@@ -50,9 +66,21 @@ body #mc_embed_signup {
     }
   }
   
+  .mc-field-group-email {
+    margin-top: 1em;
+    width: 100%;
+  }
+  
   padding: 1em;
   background: transparentize($color-highlight, 0.7);
   border-radius: 0.3em;
   margin: 1em 0 2em;
   box-sizing: border-box;
+}
+
+#mc_embed_signup #mc-embedded-subscribe-form .mc-field-group input.mce_inline_error {
+  border-color: $color-error;
+}
+#mc_embed_signup #mc-embedded-subscribe-form .mc-field-group div.mce_inline_error {
+  color: $color-error;
 }
