--- a/_includes/signup-services-announcement.html
+++ b/_includes/signup-services-announcement.html
@@ -1,17 +1,18 @@
-<div id="signup">
+<div id="{{ include.id | default "signup" }}">
 <!-- Begin Mailchimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <div id="mc_embed_signup">
 <form action="https://pascallaliberte.us11.list-manage.com/subscribe/post?u=3782ecad016861895a5f38695&amp;id=5a98e1e39a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h2>Be notified when I've got something new to announce</h2>
-<div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address </label>
+	<h2>Get notified when I've got something new to announce</h2>
+  <p>Want to be in the loop when I have a new product or service?</p>
+<div class="mc-field-group mc-field-group-email">
+	<label for="mce-EMAIL">Your Email Address Here <span class="quiet">(no spam, promise)</span></label>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 </div>
 <div class="clearfix">
   <div class="mc-field-group left">
-  	<label for="mce-FNAME">First Name </label>
+  	<label for="mce-FNAME">First Name</label>
   	<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
   </div>
   <div class="mc-field-group right">
