Now called "Bloop, Bloop, Shop"

--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -205,5 +205,5 @@ a.link-alt-lang {
   'pages/reformers-course',
   'pages/change-anything',
   'pages/jtbd',
-  'pages/bleep-bloop-shop',
+  'pages/bloop-bloop-shop',
   'pages/update';
