remove floodmeter. button submit

--- a/_includes/signup-objectives-course-cohort.html
+++ b/_includes/signup-objectives-course-cohort.html
@@ -45,7 +45,7 @@
   <div class="cf-label">If you are human, leave this blank.</div>
   <input type="text" name="jaubley" value=""> </div>
   <div class="cf-item cf-submit">
-    <button type="button" class="submit-btn color-button color-button-text" id="submit-the-objectives-course">Submit <i class="fa fa-lock"></i></button>
+    <button type="submit" class="submit-btn color-button color-button-text" id="submit-the-objectives-course">Submit <i class="fa fa-lock"></i></button>
     <div class="error-msg" id="error-submit">Form not submitted. Required fields are missing - please check for errors above.</div>
   </div>
 </form>
