course signup: add field names

--- a/_includes/signup-objectives-course-cohort.html
+++ b/_includes/signup-objectives-course-cohort.html
@@ -8,45 +8,41 @@
 <form name="language-of-objectives-signup" method="post" netlify netlify-honeypot="jaubley">
 <div class="cf-item" id="cf-item_15599"> 
   <div class="cf-label color-label"> 1. What's your e-mail address? </div>
-  <input type="text" name="15599" class="cf-input first color-input color-border" id="input_15599">
-  <div class="error-msg" id="error-15599">This field cannot be empty</div>
+  <input type="text" name="email" class="cf-input first color-input color-border" id="input_15599">
 </div>
 <div class="cf-item" id="cf-item_15598"> 
   <div class="cf-label color-label"> 2. Can I get your first name? It'll use your first name when addressing you in the weekly emails. </div>
-  <input type="text" name="15598" class="cf-input color-input color-border" id="input_15598">
-  <div class="error-msg" id="error-15598">This field cannot be empty</div>
+  <input type="text" name="first-name" class="cf-input color-input color-border" id="input_15598">
 </div>
 <div class="cf-item" id="cf-item_15602">
   <div class="cf-label color-label"> 3. What's your last name? If you'd like to just leave an initial, that's fine too. </div>
-  <input type="text" name="15602" class="cf-input color-input color-border" id="input_15602">
-  <div class="error-msg" id="error-15602">This field cannot be empty</div>
+  <input type="text" name="last-name" class="cf-input color-input color-border" id="input_15602">
 </div>
 <div class="cf-item" id="cf-item_15600">
   <div class="cf-label color-label"> 4. If we suppose anything were possible, what accomplishment will you be celebrating at the end of the next 10 weeks? </div>
-  <textarea name="15600" class="cf-input cf-text-area color-input color-border"></textarea>
-  <div class="error-msg" id="error-15600">This field cannot be empty</div>
+  <textarea name="by-the-end-of-the-course" class="cf-input cf-text-area color-input color-border"></textarea>
 </div>
 <div class="cf-item" id="cf-item_15681">
   <div class="cf-label color-label"> 5. What interests you about the course? </div>
-  <textarea name="15681" class="cf-input cf-text-area color-input color-border"></textarea>
-  <div class="error-msg" id="error-15681">This field cannot be empty</div>
+  <textarea name="interested-in-course-because" class="cf-input cf-text-area color-input color-border"></textarea>
 </div>
 <div class="cf-item" id="cf-item_15601">
   <div class="cf-label color-label"> 6. What can you tell me about yourself? What do you do for a living? What article, book or story have you read recently that has you thinking lately and why? </div>
-  <textarea name="15601" class="cf-input cf-text-area color-input color-border"></textarea>
-  <div class="error-msg" id="error-15601">This field cannot be empty</div>
+  <textarea name="about-me" class="cf-input cf-text-area color-input color-border"></textarea>
 </div>
 <div class="cf-item" id="cf-item_15682">
-  <div class="cf-label color-label"> 7. If someone else referred you to the course and also applied, what is that person's email address? </div> <input type="text" name="15682" class="cf-input color-input color-border" id="input_15682"> <div class="error-msg" id="error-15682">This field cannot be empty</div> </div> <div class="cf-item" id="cf-item_15683"> <div class="cf-label color-label"> 8. Last question: Any other comments? Questions you have, other things you'd like me to know about yourself? </div>
-  <textarea name="15683" class="cf-input cf-text-area color-input color-border"></textarea>
-  <div class="error-msg" id="error-15683">This field cannot be empty</div>
+  <div class="cf-label color-label"> 7. If someone else referred you to the course and also applied, what is that person's email address? </div>
+  <input type="text" name="referred-by" class="cf-input color-input color-border" id="input_15682">
+</div>
+<div class="cf-item" id="cf-item_15683"> 
+  <div class="cf-label color-label"> 8. Last question: Any other comments? Questions you have, other things you'd like me to know about yourself? </div>
+  <textarea name="other-comments-or-questions" class="cf-input cf-text-area color-input color-border"></textarea>
 </div>
 <div class="jaubley">
   <div class="cf-label">If you are human, leave this blank.</div>
   <input type="text" name="jaubley" value=""> </div>
   <div class="cf-item cf-submit">
     <button type="submit" class="submit-btn color-button color-button-text" id="submit-the-objectives-course">Submit <i class="fa fa-lock"></i></button>
-    <div class="error-msg" id="error-submit">Form not submitted. Required fields are missing - please check for errors above.</div>
   </div>
 </form>
 </div>
