Fix background-color, cancel breather-planner color

--- a/_assets/sass/pages/_home.scss
+++ b/_assets/sass/pages/_home.scss
@@ -12,7 +12,7 @@ html {
   // &[data-section-in-view="values"]         { background-color: #DBE2EA; }
   &[data-section-in-view="christianity"]   { background-color: #B55E19; }
   &[data-section-in-view="questions"]      { background-color: #9DB0A3; }
-  &[data-section-in-view="breather-planner"]      { background-color: #87B975; }
+  // &[data-section-in-view="breather-planner"]      { background-color: #C2BCAF; }
 }
 
 @keyframes brush-01-blue {
