--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -316,36 +316,6 @@ body #mc_embed_signup {
 #mc_embed_signup #mc-embedded-subscribe-form .mc-field-group div.mce_inline_error {
   color: #708A9F; }
 
-html {
-  transition: background-color 0.5s ease; }
-  html[data-section-in-view="interests"] {
-    background-color: #C2BCAF; }
-  html[data-section-in-view="values"] {
-    background-color: #DBE2EA; }
-  html[data-section-in-view="christianity"] {
-    background-color: #B55E19; }
-  html[data-section-in-view="questions"] {
-    background-color: #9DB0A3; }
-
-@keyframes brush-01-blue {
-  100% {
-    background-position: 0 -1447px; } }
-html[data-section-in-view="values"] #values h2 {
-  position: relative; }
-  html[data-section-in-view="values"] #values h2:before {
-    top: -30px;
-    left: -20px;
-    width: 390px;
-    height: 100px;
-    content: '';
-    position: absolute;
-    z-index: -1;
-    background: url("../images/brush-01-blue.svg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    animation: brush-01-blue 0.3s steps(14);
-    animation-fill-mode: forwards; }
-
 .home h2 {
   font-family: "freight-sans-condensed-pro", Helvetica, Arial, sans-serif;
   display: inline-block;
@@ -370,6 +340,10 @@ html[data-section-in-view="values"] #values h2 {
     .home h2 a:hover, .home h2 a:focus {
       color: #bb5400;
       border-bottom-color: rgba(187, 84, 0, 0.6); }
+.home h3 {
+  line-height: 1.2;
+  font-size: 1.4rem;
+  margin-bottom: 0.7rem; }
 .home .coming-soon {
   display: inline-block;
   font-size: 0.5em;
