--- a/_assets/sass/pages/_home.scss
+++ b/_assets/sass/pages/_home.scss
@@ -94,6 +94,13 @@ $font-headings-home: "freight-sans-condensed-pro", Helvetica, Arial, sans-serif;
     padding: 1rem 1.5rem;
     border-radius: 0.3rem;
     color: mix($color-headings-home, #000);
+    mark {
+      font-style: normal;
+      background-color: transparentize($color-headings-home, 0.4);
+      padding: 0 0.3rem;
+      font-weight: bold;
+      color: white;
+    }
     & > ul {
       text-align: left;
       margin: 0;
