Style "book a time" button

--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -193,7 +193,8 @@ a.link-alt-lang {
   'components/navigation',
   'components/footer',
   'components/forms',
-  'components/signup-forms';
+  'components/signup-forms',
+  'components/buttons';
 
 
 // Pages ————————————————————————————————————— •
