--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -316,6 +316,25 @@ body #mc_embed_signup {
 #mc_embed_signup #mc-embedded-subscribe-form .mc-field-group div.mce_inline_error {
   color: #708A9F; }
 
+.button {
+  display: inline-block;
+  margin-top: 0.5em;
+  height: auto;
+  white-space: normal;
+  line-height: 1.2;
+  padding: 0.3em 0.7em;
+  background-color: #db7c2c;
+  -webkit-appearance: none;
+  border-radius: 4px;
+  transition: background-color 0.2s ease; }
+  .button, .button:visited {
+    color: white; }
+  .button:hover {
+    background-color: #b5641f;
+    color: white; }
+  .button, .button:hover {
+    text-decoration: none; }
+
 .home h2 {
   font-family: "freight-sans-condensed-pro", Helvetica, Arial, sans-serif;
   display: inline-block;
