make screenshots bottom rounded corner

--- a/_layouts/archived.html
+++ b/_layouts/archived.html
@@ -53,7 +53,8 @@
     .desktop-screenshot {
       width: 100%;
       height: auto;
-      margin-bottom: 2rem;
+      margin-bottom: -2rem;
+      border-radius: 0 0 1.8rem 1.8rem;
       border-top: 1px solid #ddd;
       display: block;
     }
