--- a/_layouts/archived.html
+++ b/_layouts/archived.html
@@ -3,7 +3,7 @@
     
     <div class="archived-site">
       <div class="archived-banner">
-        <a href="/projects" class="back-link">← Projects</a>
+        <a href="/#archived" class="back-link">← Home</a>
         <h1>{{ page.title }}</h1>
         {{ content }}
       </div>
