add descriptions to retired projects

--- a/_layouts/archived.html
+++ b/_layouts/archived.html
@@ -3,7 +3,7 @@
     
     <div class="archived-site">
       <div class="archived-banner">
-        <a href="/#archived" class="back-link">← Home</a>
+        <a href="/#archived" class="back-link">← Retired Projects</a>
         <div class="archived-title-container">
           <h1 class="archived-title">{{ page.title }}</h1>
           <code class="archived-url">{{ page.original_url }}</code>
